Manifests/RSS Inventory Service/rss-inventory-service-load-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-inventory-service-load-test
  namespace: rss-inventory
  labels:
    app: rss-inventory-service
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8989"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: rss-inventory-service-load-test
  ports:
  - name: http
    protocol: TCP
    port: 8989
    targetPort: 8989
